@@ -4,6 +4,9 @@ Changelog
 1.1 (unreleased)
 ----------------
 
+- Add logging of detailed migration results to logfile.
+  [lgraf]
+
 - Add migration for global roles (portal_role_manager).
   [lgraf]
 
